Basic error handling and remove URI encoding requirement

--- a/config
+++ b/config
@@ -1,9 +1,8 @@
 # Config file for Bash No-IP Updater
 # Retain the double quotes surrounding each of the values below
 
-# No-IP uses your email address for the username. Both the username and password
-# must be URL encoded. URL encoder: http://meyerweb.com/eric/tools/dencoder/
-USERNAME="email%40address.com"
+# No-IP uses your email address for the username.
+USERNAME="email@address.com"
 PASSWORD="password"
 
 # Multiple hosts associated with a single IP address can be entered by
@@ -11,10 +10,11 @@ PASSWORD="password"
 HOST="host.domain.com"
 
 # The directory where logs will be stored (required)
-LOGDIR="~/logs"
+LOGDIR="$HOME/logs"
 
 # Frequency at which an IP update is forced, even if the IP has not changed.
 # This helps prevent hostname expiration.
 # Enter the value in seconds: 864000 = 10days
 # Setting this value to 0 will disable this feature.
 FORCEUPDATEFREQ="864000"
+
